@@ -1,3 +1,12 @@
+2010-05-16  Sam Weinig  <sam@webkit.org>
+
+        Reviewed by Adam Barth.
+
+        https://bugs.webkit.org/show_bug.cgi?id=39192
+        Remove unused PERFECT_HASH code CodeGeneratorJS.
+
+        * bindings/scripts/CodeGeneratorJS.pm:
+
 2010-05-17  Jeremy Moskovich  <jeremy@chromium.org>
 
         Reviewed by Jeremy Orlow.
